--- a/app/src/main/res/layout/code_list_title.xml
+++ b/app/src/main/res/layout/code_list_title.xml
@@ -6,8 +6,8 @@
         android:id="@+id/codeListTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/dark_grey"
-        android:textColor="@color/black"
+        android:background="@color/indigo"
+        android:textColor="@color/white"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
