--- a/app/src/main/res/layout/fragment_code_editor.xml
+++ b/app/src/main/res/layout/fragment_code_editor.xml
@@ -14,9 +14,9 @@
         android:layout_height="match_parent"
         android:forceDarkAllowed="false"
         android:gravity="top|start"
-        android:hint="Add pseudocode here"
+        android:hint="Add pseudocode here..."
         android:inputType="textMultiLine|textNoSuggestions"
-        android:lines="35"
+        android:lines="50"
         android:scrollbars="vertical"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
