--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,22 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PseudoGen" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.PseudoGen" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/bright_orange</item>
         <item name="colorPrimaryVariant">@color/indigo</item>
         <item name="colorOnPrimary">@color/black</item>
-
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/light_grey</item>
         <item name="colorSecondaryVariant">@color/indigo</item>
         <item name="colorOnSecondary">@color/bright_orange</item>
-
         <item name="android:windowBackground">@drawable/background_gradient</item>
         <item name="fontFamily">@font/maven_pro_medium</item>
-        <item name="android:editTextStyle">@style/Widget.AppCompat.NewEditText</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="searchViewStyle">@style/MySearchViewStyle</item>
     </style>
 
     <!-- Action Bar Style -->
@@ -37,7 +35,13 @@
 
     <!-- List View Style -->
     <style name="Widget.AppCompat.NewListView" parent="Widget.AppCompat.ListView">
-        <item name="android:background">@color/light_grey</item>
+        <item name="android:background">@color/code_editor_dark</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- Edit Text Style -->
+    <style name="Widget.AppCompat.NewEditText" parent="Widget.AppCompat.EditText">
+        <item name="fontFamily">@font/fira_mono</item>
     </style>
 
     <style name="Theme.PseudoGen.NoActionBar">
@@ -51,11 +55,6 @@
 
     <style name="CodeEditorTitleEditText" parent="Theme.PseudoGen">
         <item name="background">@color/dark_grey</item>
-    </style>
-
-    <!-- Edit Text Style -->
-    <style name="Widget.AppCompat.NewEditText" parent="Widget.AppCompat.EditText">
-        <item name="fontFamily">@font/fira_mono</item>
     </style>
 
     <!--Alert Dialog-->
@@ -78,5 +77,12 @@
         <item name="colorSecondaryVariant">@color/indigo</item>
         <item name="colorOnSecondary">@color/bright_orange</item>
         <item name="fontFamily">@font/maven_pro_medium</item>
+    </style>
+
+    <style name="MySearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <!-- Background for the search query section (e.g. EditText) -->
+        <item name="queryBackground">@color/code_editor_dark</item>
+        <!-- Background for the actions section (e.g. voice, submit) -->
+        <item name="submitBackground">@color/code_editor_white</item>
     </style>
 </resources>
