--- a/app/src/main/res/menu/code_list_menu.xml
+++ b/app/src/main/res/menu/code_list_menu.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/editItem" android:title="Edit">
     </item>
-
     <item android:id="@+id/deleteItem" android:title="Delete">
+    </item>
+    <item android:id="@+id/shareItem" android:title="Share">
+    </item>
+    <item android:title="Favorite" android:id="@+id/favoriteItem">
     </item>
 </menu>
