--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -2,6 +2,7 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:forceDarkAllowed="false"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,17 +13,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:id="@+id/centralToolBar"
         android:theme="@style/AppTheme.NoActionBar"
+        android:forceDarkAllowed="false"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:elevation="4dp">
-
+        <TextView
+            android:id="@+id/appTitleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:text="pseudoGen"
+            android:fontFamily="@font/audiowide"
+            android:textColor="@color/indigo"
+            android:textSize="20dp"
+            android:gravity="start|center"
+            android:textStyle="bold">
+        </TextView>
     </androidx.appcompat.widget.Toolbar>
-
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
@@ -30,7 +40,6 @@
             android:layout_weight="9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
-
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab_addNew"
                 android:layout_width="wrap_content"
@@ -38,9 +47,9 @@
                 android:layout_gravity="bottom|end"
                 android:layout_margin="@dimen/fab_margin"
                 android:background="@color/bright_orange"
-                android:backgroundTint="@color/indigo"
+                android:backgroundTint="@color/bright_orange"
                 android:clickable="true"
-                android:src="@drawable/edit_new_icon">
+                android:src="@drawable/edit_item_icon">
             </com.google.android.material.floatingactionbutton.FloatingActionButton>
         </FrameLayout>
 
@@ -59,13 +68,12 @@
         app:menu="@menu/bottom_nav_menu"
         app:theme="@style/Widget.BottomNavigationView"/>
     </LinearLayout>
-
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        app:itemTextAppearance="@style/MavenProTextViewStyle"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/nav_drawer_menu"/>
-
 </androidx.drawerlayout.widget.DrawerLayout>
