--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,7 +23,6 @@
         <item name="windowNoTitle">true</item>
         <item name="colorPrimary">@color/indigo</item>
         <item name="android:windowBackground">@drawable/background_gradient</item>
-        <item name="fontFamily">@font/maven_pro_medium</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/indigo</item>
     </style>
 
@@ -37,11 +36,6 @@
     <style name="Widget.AppCompat.NewListView" parent="Widget.AppCompat.ListView">
         <item name="android:background">@color/code_editor_dark</item>
         <item name="android:textColor">@color/white</item>
-    </style>
-
-    <!-- Edit Text Style -->
-    <style name="Widget.AppCompat.NewEditText" parent="Widget.AppCompat.EditText">
-        <item name="fontFamily">@font/fira_mono</item>
     </style>
 
     <style name="Theme.PseudoGen.NoActionBar">
@@ -80,9 +74,14 @@
     </style>
 
     <style name="MySearchViewStyle" parent="Widget.AppCompat.SearchView">
-        <!-- Background for the search query section (e.g. EditText) -->
+        <!-- Background for the search query section (e.g. EditText) -->\
+        <item name="android:background">@color/code_editor_dark</item>
         <item name="android:textColor">@color/code_editor_white</item>
         <!-- Background for the actions section (e.g. voice, submit) -->
-        <item name="submitBackground">@color/code_editor_white</item>
+        <item name="submitBackground">@color/bright_orange</item>
+    </style>
+
+    <style name="MavenProTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/maven_pro_medium</item>
     </style>
 </resources>
