Fixed CentralActivity toolbar

--- a/app/src/main/res/menu/code_list_top_menu.xml
+++ b/app/src/main/res/menu/code_list_top_menu.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_sortBy" android:title="Sort By">
-    </item>
-    <item android:id="@+id/action_deleteAll" android:title="Delete All">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/action_deleteAll"
+        android:title="Delete All"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/delete_all_icon">
     </item>
 </menu>
