--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -30,6 +30,12 @@
             android:layout_height="match_parent">
         </SearchView>
     </androidx.appcompat.widget.Toolbar>
+        <LinearLayout
+            android:id="@+id/adsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+        </LinearLayout>
         <FrameLayout
             android:id="@+id/frameLayoutCentral"
             android:layout_width="match_parent"
