--- a/app/src/main/res/layout/code_list_item.xml
+++ b/app/src/main/res/layout/code_list_item.xml
@@ -6,8 +6,8 @@
         android:id="@+id/codeListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/code_editor_white"
-        android:textColor="@color/indigo"
+        android:background="@color/light_grey"
+        android:textColor="@color/black"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
