--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="app_blue">#05203b</color>
+    <color name="blue_angel">#B7CEEC</color>
     <color name="code_editor_white">#F7F9F9</color>
     <color name="code_editor_dark">#202020</color>
     <color name="white">#FFFFFFFF</color>
