--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/code_editor_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/code_editor_dark"
     android:forceDarkAllowed="false"
     tools:context=".CodeEditorTabbedActivity">
     <com.google.android.material.appbar.AppBarLayout
@@ -46,43 +46,16 @@
                 android:layout_height="wrap_content">
             </TextView>
         </LinearLayout>
-<!--        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            app:tabSelectedTextColor="@color/bright_orange"
-            app:tabTextColor="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/indigo"/>-->
     </com.google.android.material.appbar.AppBarLayout>
-
-<!--        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/compileCodeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:translationY="-50dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            android:clickable="true"
-            android:background="@color/bright_orange"
-            android:backgroundTint="@color/indigo"
-            android:src="@drawable/compile_icon"/>-->
     <FrameLayout
         android:id="@+id/editor_fragment_container"
         android:layout_width="match_parent"
+        android:background="@drawable/editor_border_bg"
         android:forceDarkAllowed="false"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/appBar"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavEditShortCuts">
     </FrameLayout>
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavEditShortCuts"
         android:layout_width="match_parent"
