--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,8 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="51dp"
-        android:fontFamily="@font/audiowide"
-        android:text="pseudoGen"
+        android:text="PseudoGen"
         android:textAlignment="center"
         android:textColor="@color/bright_orange"
         android:textSize="34dp"
