--- a/app/src/main/res/layout/code_list_title.xml
+++ b/app/src/main/res/layout/code_list_title.xml
@@ -1,14 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/codeListTitle"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_weight="5"
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:textColor="@color/white"
         android:textSize="22dp"/>
+    <GridLayout
+        android:layout_weight="5"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:columnCount="2"
+        android:rowCount="2">
+        <TextView
+            android:id="@+id/tag1"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill_horizontal"
+            android:text="TAG 1"
+            android:gravity="center">
+        </TextView>
+        <TextView
+            android:id="@+id/tag2"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill_horizontal"
+            android:gravity="center"
+            android:text="TAG 2">
+        </TextView>
+        <TextView
+            android:id="@+id/tag3"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:gravity="center"
+            android:layout_gravity="fill_horizontal"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:text="TAG 3">
+        </TextView>
+        <TextView
+            android:layout_column="1"
+            android:layout_row="1"
+            android:gravity="center"
+            android:layout_gravity="fill_horizontal"
+            android:id="@+id/tag4"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:text="TAG 4">
+        </TextView>
+    </GridLayout>
 </LinearLayout>
