--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="176dp"
     android:background="@color/bright_orange"
     android:gravity="bottom"
@@ -12,4 +12,12 @@
         android:layout_height="100dp"
         android:src="@drawable/pigeonlogo">
     </ImageView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:textSize="14dp"
+        android:textColor="@color/indigo"
+        android:text="PseudoGen">
+    </TextView>
 </LinearLayout>
