--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/audiowide</item>
         <item>@font/fira_mono</item>
         <item>@font/fira_mono_medium</item>
+        <item>@font/kalam</item>
         <item>@font/maven_pro_medium</item>
         <item>@font/roboto_mono</item>
     </array>
