--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@color/bright_orange"
+    android:background="@color/indigo"
     android:gravity="bottom"
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -16,8 +16,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:textSize="14dp"
-        android:textColor="@color/indigo"
+        android:fontFamily="@font/maven_pro_medium"
+        android:textColor="@color/dark_orange"
+        android:textSize="17dp"
+        android:textStyle="bold"
         android:text="PseudoGen">
     </TextView>
 </LinearLayout>
