--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,16 +3,18 @@
     <style name="Theme.PseudoGen" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/bright_orange</item>
-        <item name="colorPrimaryVariant">@color/indigo</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
+        <item name="colorPrimaryVariant">@color/bright_orange</item>
+        <item name="colorOnPrimary">@color/indigo</item>
         <item name="colorSecondary">@color/light_grey</item>
-        <item name="colorSecondaryVariant">@color/indigo</item>
-        <item name="colorOnSecondary">@color/bright_orange</item>
+        <item name="colorSecondaryVariant">@color/dark_grey</item>
+        <item name="colorOnSecondary">@color/indigo</item>
         <item name="android:windowBackground">@drawable/background_gradient</item>
         <item name="fontFamily">@font/maven_pro_medium</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="itemTextColor">@color/dark_grey</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
         <item name="searchViewStyle">@style/MySearchViewStyle</item>
     </style>
@@ -22,6 +24,7 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="colorPrimary">@color/bright_orange</item>
+        <item name="colorOnPrimary">@color/black</item>
         <item name="android:windowBackground">@drawable/background_gradient</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/bright_orange</item>
     </style>
@@ -82,6 +85,7 @@
     </style>
 
     <style name="MavenProTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/dark_orange</item>
         <item name="android:fontFamily">@font/maven_pro_medium</item>
     </style>
 </resources>
