--- a/app/src/main/res/layout/activity_email_sign_in.xml
+++ b/app/src/main/res/layout/activity_email_sign_in.xml
@@ -7,7 +7,6 @@
     android:paddingBottom = "@dimen/activity_vertical_margin"
     android:background="@drawable/background_gradient"
     tools:context=".EmailSignInActivity">
-
     <ImageView
         android:id="@+id/logoImageView"
         android:layout_width="150dp"
@@ -15,17 +14,16 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/pigeonlogo" />
-
-        <EditText
-            android:id="@+id/usernameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/logoImageView"
-            android:layout_centerHorizontal="true"
-            android:textSize="26dp"
-            android:ems="10"
-            android:hint="username or email"
-            android:inputType="textPersonName"/>
+    <EditText
+        android:id="@+id/usernameEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logoImageView"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="email"
+        android:inputType="textPersonName"
+        android:textSize="26dp" />
 
         <EditText
             android:id="@+id/passwordEditText"
@@ -40,11 +38,12 @@
         android:id="@+id/emailSignInButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/passwordEditText"
-        android:layout_alignRight="@id/passwordEditText"
-        android:theme="@style/CustomSignInButtons"
+        android:layout_below="@id/forgotPasswordTextView"
         android:onClick="signInClicked"
-        android:text="Go" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="Go"
+        android:theme="@style/CustomSignInButtons" />
     <ImageView
         android:id="@+id/passwordShowHideImageView"
         android:layout_width="30dp"
@@ -53,4 +52,15 @@
         android:paddingEnd="30px"
         android:src="@drawable/showpassword"
         android:onClick="showPasswordClicked"/>
+    <TextView
+        android:id="@+id/forgotPasswordTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Forgot Password?"
+        android:layout_below="@id/passwordEditText"
+        android:clickable="true"
+        android:onClick="forgotPasswordClicked"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/light_grey">
+    </TextView>
 </RelativeLayout>
