--- a/app/src/main/res/layout/add_new_code_dialog.xml
+++ b/app/src/main/res/layout/add_new_code_dialog.xml
@@ -21,22 +21,48 @@
         android:layout_marginBottom="20dp"
         android:hint="Description"
         android:inputType="textMultiLine"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:padding="20dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Select Input">
+        </TextView>
         <Spinner
             android:id="@+id/codeInputSpinner"
             android:spinnerMode="dialog"
             android:prompt="@string/hint_input_resource"
+            android:layout_weight="5"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center"/>
-       <Spinner
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:padding="20dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Select Output">
+        </TextView>
+        <Spinner
             android:id="@+id/codeOutputSpinner"
             android:spinnerMode="dialog"
             android:prompt="@string/hint_output_resource"
-            android:layout_width="match_parent"
-           android:layout_marginTop="20dp"
-           android:layout_marginBottom="20dp"
+            android:layout_weight="5"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
+    </LinearLayout>
 </LinearLayout>
