Added Google Sign-In Auth with Firebase. Tested and works well

--- a/app/src/main/res/layout/activity_email_sign_in.xml
+++ b/app/src/main/res/layout/activity_email_sign_in.xml
@@ -42,8 +42,8 @@
         android:onClick="signInClicked"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:text="Go"
-        android:theme="@style/CustomSignInButtons" />
+        android:text="Go">
+    </Button>
     <ImageView
         android:id="@+id/passwordShowHideImageView"
         android:layout_width="30dp"
