--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,33 +21,31 @@
 
   <Button
       android:id="@+id/emailButton"
-      android:layout_width="170dp"
+      android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_marginBottom="307dp"
       android:adjustViewBounds="true"
       android:drawableLeft="@drawable/emailsignin"
       android:onClick="signInWithEmailClicked"
-      android:padding="20dp"
       android:scaleType="centerInside"
-      android:text="Email"
-      android:theme="@style/CustomSignInButtons"
+      android:text="Continue with email"
+      android:backgroundTint="@color/fire_brick"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent" />
-
   <Button
       android:id="@+id/googleButton"
-      android:layout_width="170dp"
+      android:layout_width="300dp"
       android:layout_height="wrap_content"
-      android:layout_marginTop="62dp"
+      android:layout_marginTop="20dp"
       android:layout_marginBottom="197dp"
       android:adjustViewBounds="true"
+      android:onClick="signInWithGoogleClicked"
       android:drawableLeft="@drawable/googlesignin"
-      android:padding="20dp"
       android:scaleType="centerInside"
-      android:text="Google"
-      android:theme="@style/CustomSignInButtons"
+      android:text="Continue with Google"
+      android:backgroundTint="@color/white"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
