--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,6 @@
     <color name="cream_orange">#FBC95A</color>
     <color name="dark_orange">#ff8c00</color>
     <color name="green">#008000</color>
+    <color name="fire_brick">#B22222</color>
 
 </resources>
