--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -39,6 +39,14 @@
             ads:adSize="BANNER"
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
         </com.google.android.gms.ads.AdView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dp"
+            android:text="YOUR LIST"
+            android:textSize="16dp">
+        </TextView>
         <FrameLayout
             android:id="@+id/frameLayoutCentral"
             android:layout_width="match_parent"
