--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,7 @@
       android:drawableLeft="@drawable/emailsignin"
       android:onClick="signInWithEmailClicked"
       android:scaleType="centerInside"
+      android:textSize="12dp"
       android:text="Continue with email"
       android:backgroundTint="@color/fire_brick"
       app:layout_constraintBottom_toBottomOf="parent"
