--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -2,17 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blackboard_dark"
     android:forceDarkAllowed="false"
     tools:context=".CodeEditorTabbedActivity">
+    <LinearLayout
+        android:id="@+id/editorAdViewLayout"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:orientation="horizontal">
+        <com.google.android.gms.ads.AdView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editorAdViewBanner"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+        </com.google.android.gms.ads.AdView>
+    </LinearLayout>
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/code_editor_dark"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/editorAdViewLayout">
     <!--android:theme="@style/Theme.PseudoGen.AppBarOverlay"-->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/editorToolbar"
@@ -51,7 +66,6 @@
     <FrameLayout
         android:id="@+id/editor_fragment_container"
         android:layout_width="match_parent"
-        android:background="@drawable/editor_border_bg"
         android:forceDarkAllowed="false"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/appBar"
