Fixed edit details dialog for codeEditor

--- a/app/src/main/res/layout/code_list_item.xml
+++ b/app/src/main/res/layout/code_list_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/codeListItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/light_grey"
+        android:background="@drawable/item_rounded_corner"
         android:textColor="@color/black"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
