--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -12,6 +12,7 @@
         android:id="@+id/editorAdViewLayout"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
+        android:background="@color/code_editor_dark"
         android:layout_height="?attr/actionBarSize"
         android:orientation="horizontal">
         <com.google.android.gms.ads.AdView
@@ -67,6 +68,7 @@
         android:id="@+id/editor_fragment_container"
         android:layout_width="match_parent"
         android:forceDarkAllowed="false"
+        android:background="@drawable/editor_border_bg"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/appBar"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavEditShortCuts">
