--- a/app/src/main/res/layout/add_new_code_dialog.xml
+++ b/app/src/main/res/layout/add_new_code_dialog.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:padding="20dp"
         android:hint="Pseudocode Title"
         android:inputType="text"/>
     <EditText
@@ -19,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:padding="20dp"
         android:hint="Description"
         android:inputType="textMultiLine"/>
     <LinearLayout
@@ -29,7 +31,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:text="Select Input">
         </TextView>
         <Spinner
@@ -51,7 +53,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
+            android:textAlignment="viewStart"
             android:text="Select Output">
         </TextView>
         <Spinner
