--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -19,7 +19,10 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:id="@+id/centralToolBar"
-        android:background="@color/bright_orange"
+        android:layout_marginTop="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:background="@drawable/actionbar_central_activity_shape"
         android:theme="@style/AppTheme.NoActionBar"
         android:forceDarkAllowed="false"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -35,6 +38,7 @@
             android:id="@+id/adView"
             android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
+            android:layout_marginTop="2dp"
             android:layout_height="wrap_content"
             ads:adSize="BANNER"
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
@@ -44,7 +48,7 @@
             android:layout_height="30dp"
             android:paddingTop="10dp"
             android:paddingLeft="10dp"
-            android:text="YOUR LIST"
+            android:text="Y O U R  L I S T"
             android:textSize="16dp">
         </TextView>
         <FrameLayout
@@ -64,8 +68,7 @@
                 app:layout_constraintTop_toBottomOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:theme="@style/Widget.AppCompat.NewListView">
+                app:layout_constraintStart_toStartOf="parent">
             </ExpandableListView>
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab_addNew"
@@ -73,11 +76,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="@dimen/fab_margin"
-                android:background="@color/bright_orange"
-                android:backgroundTint="@color/bright_orange"
-                android:tint="@color/indigo"
-                android:clickable="true"
-                android:src="@drawable/edit_item_icon">
+                android:src="@drawable/edit_new_icon"
+                app:tint="@color/bright_orange"
+                app:backgroundTint="@color/indigo"
+                android:clickable="true">
             </com.google.android.material.floatingactionbutton.FloatingActionButton>
         </FrameLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -86,6 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="bottom"
+        android:layout_marginBottom="2dp"
         android:layout_alignParentBottom="true"
         android:background="@color/black"
         app:itemBackground="@color/black"
