--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,15 +5,14 @@
         <item name="colorPrimary">@color/bright_orange</item>
         <item name="colorPrimaryVariant">@color/bright_orange</item>
         <item name="colorOnPrimary">@color/indigo</item>
-
         <item name="colorSecondary">@color/light_grey</item>
         <item name="colorSecondaryVariant">@color/dark_grey</item>
         <item name="colorOnSecondary">@color/indigo</item>
-
         <item name="android:windowBackground">@drawable/background_gradient</item>
         <item name="fontFamily">@font/maven_pro_medium</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:forceDarkAllowed">false</item>
         <item name="itemTextColor">@color/dark_grey</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
