--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -20,8 +20,8 @@
         android:layout_height="?attr/actionBarSize"
         android:id="@+id/centralToolBar"
         android:layout_marginTop="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="@drawable/actionbar_central_activity_shape"
         android:theme="@style/AppTheme.NoActionBar"
         android:forceDarkAllowed="false"
@@ -88,7 +88,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="2dp"
         android:layout_alignParentBottom="true"
         android:background="@color/black"
         app:itemBackground="@color/black"
