--- a/app/src/main/res/layout/fragment_code_editor.xml
+++ b/app/src/main/res/layout/fragment_code_editor.xml
@@ -6,17 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".CodeEditorFragment"
     android:forceDarkAllowed="false"
+    android:background="@drawable/editor_border_bg"
     android:id="@+id/fragment_code_editor">
     <com.maharshiappdev.pseudogen.LineNumberedEditText
         android:id="@+id/inputCodeEditText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/blackboard_dark"
         android:forceDarkAllowed="false"
         android:gravity="top|start"
         android:hint="Add pseudocode here..."
         android:inputType="textMultiLine|textNoSuggestions"
         android:lines="50"
-        android:scrollbars="vertical"
+        android:scrollbars="vertical|horizontal"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
