--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -46,7 +46,6 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:paddingTop="10dp"
             android:paddingLeft="10dp"
             android:text="Y O U R  L I S T"
             android:textSize="16dp">
@@ -65,6 +64,8 @@
                 android:choiceMode="singleChoice"
                 android:padding="10dp"
                 android:layout_weight="1"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="10.0sp"
                 app:layout_constraintTop_toBottomOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
                 app:layout_constraintEnd_toEndOf="parent"
