--- a/app/src/main/res/layout/activity_code_editor_tabbed.xml
+++ b/app/src/main/res/layout/activity_code_editor_tabbed.xml
@@ -5,7 +5,7 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blackboard_dark"
+    android:background="@color/code_editor_dark"
     android:forceDarkAllowed="false"
     tools:context=".CodeEditorTabbedActivity">
     <LinearLayout
@@ -29,7 +29,6 @@
         android:layout_height="wrap_content"
         android:background="@color/code_editor_dark"
         app:layout_constraintTop_toBottomOf="@id/editorAdViewLayout">
-    <!--android:theme="@style/Theme.PseudoGen.AppBarOverlay"-->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/editorToolbar"
             android:layout_width="match_parent"
@@ -68,7 +67,6 @@
         android:id="@+id/editor_fragment_container"
         android:layout_width="match_parent"
         android:forceDarkAllowed="false"
-        android:background="@drawable/editor_border_bg"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/appBar"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavEditShortCuts">
