--- a/app/src/main/res/layout/code_list_title.xml
+++ b/app/src/main/res/layout/code_list_title.xml
@@ -11,6 +11,6 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textColor="@color/code_editor_white"
+        android:textColor="@color/code_editor_dark"
         android:textSize="22dp" />
 </LinearLayout>
